Feat: added error handling for load but still needs fix